# free-mint

./: .clinerules  .gitignore  Cargo.toml  README.md  build.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: test-wasm.sh
src/: constants.rs  factory.rs  lib.rs
src/tests/: free_mint_test_integration.rs  free_mint_test_unit_wasm.rs  mock.rs  mod.rs
tests/: free_mint_test.rs  free_mint_test_wasm.rs
