[package]
name = "free-mint"
version = "0.1.0"
edition = "2021"
description = "A modernized and secure version of the free mint alkane contract"
authors = ["Alkane Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", version = "0.2.3" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", version = "0.2.3" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }

[dev-dependencies]
once_cell = "1.19.0"
wasm-bindgen-test = "0.3.40"
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", version = "0.2.3", features = ["test-utils"] }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", version = "0.2.3", features = [
    "test-utils",
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = [
    "test-utils",
] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", features = [
    "test-utils",
] }
hex_lit = "0.1.1"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"
hex = "0.4.3"

[features]
default = []
test = []